<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>cc.wlizhi</groupId>
    <artifactId>eddie</artifactId>
    <version>1.0.0</version>
    <packaging>pom</packaging>

    <name>Eddie Parent</name>
    <description>Eddie — 个人电脑助手</description>

    <properties>
        <java.version>25</java.version>
        <maven.compiler.source>${java.version}</maven.compiler.source>
        <maven.compiler.target>${java.version}</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>

        <spring-boot.version>4.1.0</spring-boot.version>
        <spring-ai.version>2.0.0</spring-ai.version>
        <sqlite-jdbc.version>3.53.2.0</sqlite-jdbc.version>
        <mapstruct.version>1.6.3</mapstruct.version>
    </properties>

    <modules>
        <module>ai-common</module>
        <module>ai-chat</module>
        <module>ai-agent</module>
        <module>ai-tools</module>
        <module>ai-memory</module>
        <module>ai-settings</module>
        <module>ai-app</module>
    </modules>

    <dependencyManagement>
        <dependencies>
            <!-- Spring Boot BOM -->
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-dependencies</artifactId>
                <version>${spring-boot.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <!-- Spring AI BOM -->
            <dependency>
                <groupId>org.springframework.ai</groupId>
                <artifactId>spring-ai-bom</artifactId>
                <version>${spring-ai.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <!-- 自有模块 -->
            <dependency>
                <groupId>cc.wlizhi</groupId>
                <artifactId>ai-common</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>cc.wlizhi</groupId>
                <artifactId>ai-chat</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>cc.wlizhi</groupId>
                <artifactId>ai-agent</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>cc.wlizhi</groupId>
                <artifactId>ai-tools</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>cc.wlizhi</groupId>
                <artifactId>ai-memory</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>cc.wlizhi</groupId>
                <artifactId>ai-settings</artifactId>
                <version>${project.version}</version>
            </dependency>

            <!-- 第三方依赖 -->
            <dependency>
                <groupId>org.xerial</groupId>
                <artifactId>sqlite-jdbc</artifactId>
                <version>${sqlite-jdbc.version}</version>
            </dependency>
            <!-- MapStruct -->
            <dependency>
                <groupId>org.mapstruct</groupId>
                <artifactId>mapstruct</artifactId>
                <version>${mapstruct.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.springframework.boot</groupId>
                    <artifactId>spring-boot-maven-plugin</artifactId>
                    <version>${spring-boot.version}</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.13.0</version>
                    <configuration>
                        <source>${java.version}</source>
                        <target>${java.version}</target>
                        <annotationProcessorPaths>
                            <path>
                                <groupId>org.projectlombok</groupId>
                                <artifactId>lombok</artifactId>
                            </path>
                            <path>
                                <groupId>org.mapstruct</groupId>
                                <artifactId>mapstruct-processor</artifactId>
                                <version>${mapstruct.version}</version>
                            </path>
                        </annotationProcessorPaths>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.graalvm.buildtools</groupId>
                    <artifactId>native-maven-plugin</artifactId>
                    <version>1.1.3</version>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>
</project>
